--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
   ],
   "dependencies": {
     "bootstrap": "~3.2.0",
-    "angular": "~1.2.19"
+    "angular": "~1.2.19",
+    "angular-route": "~1.2.19"
   }
 }
