--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,6 @@
   "dependencies": {
     "bootstrap": "~3.2.0",
     "angular": "~1.2.19",
-    "angular-route": "~1.2.19"
+    "angular-ui-router": "~0.2.10"
   }
 }
