--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,10 @@
   "dependencies": {
     "bootstrap": "~3.2.0",
     "angular": "~1.2.19",
-    "angular-ui-router": "~0.2.10"
+    "angular-ui-router": "~0.2.10",
+    "angular-resource": "~1.2.19"
+  },
+  "devDependencies": {
+    "angular-mocks": "~1.2.19"
   }
 }
