--- a/bower.json
+++ b/bower.json
@@ -1,21 +1,22 @@
 {
-    "name": "admin-console-of-act",
-    "version": "0.0.0",
-    "license": "MIT",
-    "ignore": [
-        "**/.*",
-        "node_modules",
-        "bower_components",
-        "test",
-        "tests"
-    ],
-    "dependencies": {
-        "bootstrap": "~3.2.0",
-        "angular": "~1.2.19",
-        "angular-ui-router": "~0.2.10",
-        "angular-resource": "~1.2.19"
-    },
-    "devDependencies": {
-        "angular-mocks": "~1.2.19"
-    }
+  "name": "admin-console-of-act",
+  "version": "0.0.0",
+  "license": "MIT",
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "bower_components",
+    "test",
+    "tests"
+  ],
+  "dependencies": {
+    "bootstrap": "~3.2.0",
+    "angular": "~1.2.19",
+    "angular-ui-router": "~0.2.10",
+    "angular-resource": "~1.2.19",
+    "ng-grid": "~2.0.11"
+  },
+  "devDependencies": {
+    "angular-mocks": "~1.2.19"
+  }
 }
