--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "angular": "~1.2.19",
     "angular-ui-router": "~0.2.10",
     "angular-resource": "~1.2.19",
-    "ng-grid": "~2.0.11"
+    "ng-grid": "~2.0.11",
+    "angular-ui": "~0.4.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.19"
