--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "angular-ui-router": "~0.2.10",
     "angular-resource": "~1.2.19",
     "ng-grid": "~2.0.11",
-    "angular-bootstrap": "~0.11.0"
+    "angular-bootstrap": "~0.11.0",
+    "angular-animate": "~1.2.20"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.19"
