--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
     "ng-grid": "~2.0.11",
     "angular-bootstrap": "~0.11.0",
     "angular-animate": "~1.2.20",
+    "angular-charts": "~0.2.4",
     "es5-shim": "~4.0.1"
   },
   "devDependencies": {
