--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
     "angular-resource": "~1.2.19",
     "ng-grid": "~2.0.11",
     "angular-bootstrap": "~0.11.0",
-    "angular-animate": "~1.2.20"
+    "angular-animate": "~1.2.20",
+    "es5-shim": "~4.0.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.19"
