--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,8 @@
     "es5-shim": "~4.0.1",
     "angular-translate": "~2.2.0",
     "angular-translate-loader-partial": "~2.0.0",
-    "angular-ui-utils": "https://github.com/angular-ui/ui-utils.git#~0.1.1"
+    "angular-ui-utils": "https://github.com/angular-ui/ui-utils.git#~0.1.1",
+    "mb-scrollbar": "https://github.com/mattbalmer/mb-scrollbar.git#~2.1.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.19"
