--- a/bower.json
+++ b/bower.json
@@ -17,13 +17,14 @@
     "ng-grid": "~2.0.11",
     "angular-bootstrap": "~0.11.0",
     "angular-animate": "~1.2.20",
-    "angular-charts": "~0.2.4",
     "es5-shim": "~4.0.1",
     "angular-translate": "~2.2.0",
     "angular-translate-loader-partial": "~2.0.0",
     "angular-ui-utils": "https://github.com/angular-ui/ui-utils.git#~0.1.1",
     "mb-scrollbar": "https://github.com/mattbalmer/mb-scrollbar.git#~2.1.0",
-    "angular-cookies": "~1.2.21"
+    "angular-cookies": "~1.2.21",
+    "highcharts": "~4.0.3",
+    "highcharts-ng": "~0.0.6"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.19"
