--- a/bower.json
+++ b/bower.json
@@ -24,7 +24,9 @@
     "mb-scrollbar": "https://github.com/mattbalmer/mb-scrollbar.git#~2.1.0",
     "angular-cookies": "~1.2.21",
     "highcharts": "~4.0.3",
-    "highcharts-ng": "~0.0.6"
+    "highcharts-ng": "~0.0.6",
+    "ng-context-menu": "~0.1.6",
+    "angular-treeview": "*"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.19"
