--- a/bower.json
+++ b/bower.json
@@ -26,6 +26,7 @@
     "highcharts": "~4.0.3",
     "highcharts-ng": "~0.0.6",
     "ng-context-menu": "~0.1.6",
+    "ng-file-upload": "~1.6.5",
     "angular-treeview": "*",
     "angular-snap": "~1.5.4",
     "angular-pageslide-directive": "https://github.com/dpiccone/ng-pageslide.git#~0.1.6"
