--- a/bower.json
+++ b/bower.json
@@ -27,7 +27,8 @@
     "highcharts-ng": "~0.0.6",
     "ng-context-menu": "~0.1.6",
     "angular-treeview": "*",
-    "angular-snap": "~1.5.4"
+    "angular-snap": "~1.5.4",
+    "angular-pageslide-directive": "https://github.com/dpiccone/ng-pageslide.git#~0.1.6"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.19"
