--- a/bower.json
+++ b/bower.json
@@ -29,7 +29,7 @@
     "ng-file-upload": "~1.6.5",
     "angular-treeview": "*",
     "angular-snap": "~1.5.4",
-    "angular-pageslide-directive": "https://github.com/dpiccone/ng-pageslide.git#~0.1.6"
+    "angular-pageslide-directive": "git@github.com:island205/ng-pageslide.git#~0.1.7"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.19"
