--- a/bower.json
+++ b/bower.json
@@ -31,7 +31,8 @@
     "angular-snap": "~1.5.4",
     "ng-pageslide": "~0.1.8",
     "ng-clip": "~0.2.2",
-    "angular-sanitize": "~1.2.23"
+    "angular-sanitize": "~1.2.23",
+    "angular-ui-select2": "~0.0.5"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.19"
