--- a/bower.json
+++ b/bower.json
@@ -32,7 +32,9 @@
     "ng-pageslide": "~0.1.8",
     "ng-clip": "~0.2.2",
     "angular-sanitize": "~1.2.23",
-    "angular-ui-select2": "~0.0.5"
+    "angular-ui-select2": "~0.0.5",
+    "bootstrap-select": "~1.6.2",
+    "angular-bootstrap-select": "~0.0.3"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.19"
