--- a/bower.json
+++ b/bower.json
@@ -34,7 +34,8 @@
     "angular-sanitize": "~1.2.23",
     "angular-ui-select2": "~0.0.5",
     "bootstrap-select": "~1.6.2",
-    "angular-bootstrap-select": "~0.0.3"
+    "angular-bootstrap-select": "~0.0.3",
+    "ng-scrollbar": "~0.0.5"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.19"
