--- a/bower.json
+++ b/bower.json
@@ -35,7 +35,8 @@
     "angular-ui-select2": "~0.0.5",
     "bootstrap-select": "~1.6.2",
     "angular-bootstrap-select": "~0.0.3",
-    "ng-scrollbar": "~0.0.5"
+    "ng-scrollbar": "~0.0.5",
+    "angular-md5": "~0.1.7"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.19"
