--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,6 @@
     "angular-translate": "~2.2.0",
     "angular-translate-loader-partial": "~2.0.0",
     "angular-ui-utils": "https://github.com/angular-ui/ui-utils.git#~0.1.1",
-    "mb-scrollbar": "https://github.com/mattbalmer/mb-scrollbar.git#~2.1.0",
     "angular-cookies": "~1.2.21",
     "highcharts": "~4.0.3",
     "highcharts-ng": "~0.0.6",
@@ -35,8 +34,9 @@
     "angular-ui-select2": "~0.0.5",
     "bootstrap-select": "~1.6.2",
     "angular-bootstrap-select": "~0.0.3",
-    "ng-scrollbar": "~0.0.5",
-    "angular-md5": "~0.1.7"
+    "angular-md5": "~0.1.7",
+    "angular-perfect-scrollbar": "~0.1.4",
+    "perfect-scrollbar": "~0.4.11"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.19"
