--- a/bower.json
+++ b/bower.json
@@ -36,7 +36,8 @@
     "angular-bootstrap-select": "~0.0.3",
     "angular-md5": "~0.1.7",
     "angular-perfect-scrollbar": "git@github.com:island205/angular-perfect-scrollbar.git",
-    "perfect-scrollbar": "~0.4.11"
+    "perfect-scrollbar": "~0.4.11",
+    "Angular-At-Directive": "https://github.com/scarletsky/Angular-At-Directive.git"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.19"
