--- a/bower.json
+++ b/bower.json
@@ -37,7 +37,8 @@
     "angular-md5": "~0.1.7",
     "angular-perfect-scrollbar": "git@github.com:lh8725473/angular-perfect-scrollbar.git",
     "perfect-scrollbar": "~0.4.11",
-    "Angular-At-Directive": "https://github.com/scarletsky/Angular-At-Directive.git"
+    "Angular-At-Directive": "https://github.com/scarletsky/Angular-At-Directive.git",
+    "jquery.atwho": "~0.5.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.19"
